Attempt to add x axis label —> Still buggy, can see that it overlaps with the y axis by a little

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,23 +1,15 @@
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  width: 960px;
-  height: 500px;
-  position: relative;
-  margin: auto;
-}
-
 h1, h4 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
 }
 
 body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        width: 960px;
-        height: 500px;
-        position: relative;
-    }
-    
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 960px;
+    height: 500px;
+    position: relative;
+}
+
 svg {
     width: 100%;
     height: 100%;
